// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`starships reducer: should handle START_FETCHING action 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": true,
}
`;

exports[`starships reducer: should return initial state by default 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": false,
}
`;
